# sharc

./: CMakeLists.txt  LICENSE  main.cpp
src/: CMakeLists.txt  compressor.cpp  compressor.hpp  compressor_support.cpp  compressor_support.hpp  global_include.hpp  keys.cpp  keys.hpp  lcp.cpp  lcp.hpp  markov.cpp  markov.hpp  statistics.cpp  statistics.hpp  support.cpp  support.hpp
src/bwt/: CMakeLists.txt
src/encoders/: CMakeLists.txt  bzip2.cpp  bzip2.hpp  chunk_huffman.cpp  chunk_huffman.hpp  cmtf.cpp  cmtf.hpp  dc.cpp  dc.hpp  delta.cpp  delta.hpp  encoder.hpp  encoders.cpp  encoders.hpp  gzip.cpp  gzip.hpp  huffman.cpp  huffman.hpp  rle.cpp  rle.hpp  sspack.cpp  sspack.hpp  xor.cpp  xor.hpp
src/proto/: CMakeLists.txt  model.proto  pack.cpp.in  pack.hpp.in
